[package]
name = "mpv-libretro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glsl-lang = { version = "0.5.2", default-features = false, features = ["lexer-v2-full"] }
image = { version = "0.25.1", default-features = false, features = ["jpeg", "png"] }
librashader-common = { version = "0.2.7", default-features = false }
librashader-preprocess = { version = "0.2.7", default-features = false }
librashader-presets = { version = "0.2.7", default-features = false }
