[package]
name = "mpv-libretro"
version = "0.1.0"
edition = "2021"


[profile.release]
debug = "line-tables-only"


[dependencies]
glsl-lang = { version = "0.5.2", default-features = false, features = ["lexer-v2-full"] }
image = { version = "0.25.1", default-features = false, features = ["jpeg", "png"] }
librashader-common = { version = "0.2.7", default-features = false }
librashader-preprocess = { version = "0.2.7", default-features = false }
librashader-presets = { version = "0.2.7", default-features = false }
regex = { version = "1.10.5", default-features = false }
