[package]
name = "mpv-libretro"
version = "0.1.0"
edition = "2021"


[profile.release]
debug = "line-tables-only"


[dependencies]
glsl-lang = { version = "0.8.0", default-features = false, features = ["lexer-full"] }
image = { version = "0.25.1", default-features = false, features = ["jpeg", "png"] }
librashader-common = { version = "0.8.1", default-features = false }
librashader-preprocess = { version = "0.8.1", default-features = false }
librashader-presets = { version = "0.8.1", default-features = false }
